--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -157,6 +157,7 @@
 }
 .ourteam-section .subtitle-section {
     margin-bottom: 13px;
+    font-weight: 500;
 }
 .ourteam-section .title-section {
     letter-spacing: 4px;
