--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,3 +472,47 @@ body {
     background-color: #4C475C;
     color: #fff;
 }
+
+
+#scroll-top {
+    position: fixed;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 4px;
+    line-height: 35px;
+    text-align: center;
+    z-index: 1;
+    right: 14px;
+    bottom: 23px;
+    opacity: 0;
+    visibility: hidden;
+    cursor: pointer;
+    overflow: hidden;
+}
+#scroll-top:before, #scroll-top:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s ease;
+}
+#scroll-top:before {
+    z-index: -1;
+    background-color: #0053ff;
+}
+#scroll-top:after {
+    content: "\f077";
+    font-family: "FontAwesome";
+    font-size: 18px;
+    color: #fff;
+    top: 7px;
+}
+#scroll-top.show {
+    right: 24px;
+    opacity: 1;
+    visibility: visible;
+    z-index: 99;
+}
