--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,85 +1,8 @@
 
+@import "https://use.typekit.net/wle4hpz.css";
 @import "animate.css";
 @import "fontawesome.css";
 @import "footer.css";
-
-@font-face {
-    font-family: 'Acumin Pro';
-    src: url('../fonts/acumin-pro-cufon/Acumin-Pro.eot');
-    src: local("../fonts/acumin-pro-cufon/Acumin-Pro"), 
-            local("../fonts/acumin-pro-cufon/Acumin-Pro"), 
-            url('../fonts/acumin-pro-cufon/Acumin-Pro.eot?#iefix') format("embedded-opentype"), 
-            url('../fonts/acumin-pro-cufon/Acumin-Pro.woff2') format("woff2"), 
-            url('../fonts/acumin-pro-cufon/Acumin-Pro.woff') format("woff"), 
-            url('../fonts/acumin-pro-cufon/Acumin-Pro.ttf') format("truetype");
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Acumin Pro'; /* Medium */
-    src: url('../fonts/acumin-pro-cufon/Acumin-MediumPro.eot');
-    src: local("../fonts/acumin-pro-cufon/Acumin-MediumPro"), 
-            local("../fonts/acumin-pro-cufon/Acumin-MediumPro"), 
-            url('../fonts/acumin-pro-cufon/Acumin-MediumPro.eot?#iefix') format("embedded-opentype"), 
-            url('../fonts/acumin-pro-cufon/Acumin-MediumPro.woff2') format("woff2"), 
-            url('../fonts/acumin-pro-cufon/Acumin-MediumPro.woff') format("woff"), 
-            url('../fonts/acumin-pro-cufon/Acumin-MediumPro.ttf') format("truetype");
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Acumin Pro'; /* Semibold */
-    src: url('../fonts/acumin-pro-cufon/Acumin-smbd.eot');
-    src: local("../fonts/acumin-pro-cufon/Acumin-smbd"), 
-            local("../fonts/acumin-pro-cufon/Acumin-smbd"), 
-            url('../fonts/acumin-pro-cufon/Acumin-smbd.eot?#iefix') format("embedded-opentype"), 
-            url('../fonts/acumin-pro-cufon/Acumin-smbd.woff2') format("woff2"), 
-            url('../fonts/acumin-pro-cufon/Acumin-smbd.woff') format("woff"), 
-            url('../fonts/acumin-pro-cufon/Acumin-smbd.ttf') format("truetype");
-    font-weight: 600;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Acumin Pro'; /* Bold */
-    src: url('../fonts/acumin-pro-cufon/Acumin-BdPro.eot');
-    src: local("../fonts/acumin-pro-cufon/Acumin-BdPro"), 
-            local("../fonts/acumin-pro-cufon/Acumin-BdPro"), 
-            url('../fonts/acumin-pro-cufon/Acumin-BdPro.eot?#iefix') format("embedded-opentype"), 
-            url('../fonts/acumin-pro-cufon/Acumin-BdPro.woff2') format("woff2"), 
-            url('../fonts/acumin-pro-cufon/Acumin-BdPro.woff') format("woff"), 
-            url('../fonts/acumin-pro-cufon/Acumin-BdPro.ttf') format("truetype");
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Acumin Pro Italic';
-    src: url('../fonts/acumin-pro-cufon/Acumin-ItPro.eot');
-    src: local("../fonts/acumin-pro-cufon/Acumin-ItPro"), 
-            local("../fonts/acumin-pro-cufon/Acumin-ItPro"), 
-            url('../fonts/acumin-pro-cufon/Acumin-ItPro.eot?#iefix') format("embedded-opentype"), 
-            url('../fonts/acumin-pro-cufon/Acumin-ItPro.woff2') format("woff2"), 
-            url('../fonts/acumin-pro-cufon/Acumin-ItPro.woff') format("woff"), 
-            url('../fonts/acumin-pro-cufon/Acumin-ItPro.ttf') format("truetype");
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Acumin Pro Bold Italic';
-    src: url('../fonts/acumin-pro-cufon/Acumin-BdItPro.eot');
-    src: local("../fonts/acumin-pro-cufon/Acumin-BdItPro"), 
-            local("../fonts/acumin-pro-cufon/Acumin-BdItPro"), 
-            url('../fonts/acumin-pro-cufon/Acumin-BdItPro.eot?#iefix') format("embedded-opentype"), 
-            url('../fonts/acumin-pro-cufon/Acumin-BdItPro.woff2') format("woff2"), 
-            url('../fonts/acumin-pro-cufon/Acumin-BdItPro.woff') format("woff"), 
-            url('../fonts/acumin-pro-cufon/Acumin-BdItPro.ttf') format("truetype");
-    font-weight: 700;
-    font-style: normal;
-}
 
 #loading-overlay {
     position: fixed;
@@ -163,7 +86,8 @@ a {
 }
 
 body {
-    font-family: 'Acumin Pro';
+    /* font-family: 'Acumin Pro'; */
+    font-family: "acumin-pro-wide",sans-serif;
 }
 .container {
     position: relative;
