--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 60px;
+    padding: 50px 60px;
 }
 .header-transparent {
     position: absolute;
@@ -204,9 +204,10 @@ body {
 }
 .header .menu {
     display: flex;
+    padding-right: 110px;
 }
 .header .menu-item {
-    padding: 0 20px;
+    padding: 0 70px;
 }
 .header .menu-item a {
     font-size: 24px;
@@ -229,36 +230,36 @@ body {
 }
 .social-menu a {
     color: #0054FF;
-    font-size: 25px;
+    font-size: 28px;
     display: flex;
     align-items: center;
 }
 .social-menu .item-social + .item-social {
-    margin-left: 10px;
+    margin-left: 12px;
 }
 .home .hero {
     background-image: url('../img/hero/hero-index.png');
     background-size: cover;
-    padding: 200px 0 40px;
+    padding: 294px 0 40px;
 }
 .hero-text-wrap {
     text-align: center;
-    max-width: 900px;
+    max-width: 1100px;
     margin: 0 auto;
 }
 .hero-text-wrap .sub-title {
     color: #EEECE4;
     font-size: 19px;
     text-transform: uppercase;
-    letter-spacing: 2px;
-    margin: 0 0 10px;
+    letter-spacing: 4px;
+    margin: 0 0 25px;
 }
 .hero-text-wrap .title {
     color: #EEECE4;
     font-size: 75px;
     font-weight: 500;
     text-transform: uppercase;
-    letter-spacing: 1.5px;
+    letter-spacing: 12px;
     position: relative;
     padding: 0 0 10px;
     margin: 0 0 25px;
