--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,80 @@ body {
     }
 }
 
+/* Mobile Menu Button */
+.mobile-button {
+    display           : none;
+    position          : absolute;
+    width             : 26px;
+    height            : 26px;
+    top               : 50%;
+    right             : 20px;
+    background-color  : transparent;
+    cursor            : pointer;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition   : all 0.3s ease;
+    -ms-transition    : all 0.3s ease;
+    -o-transition     : all 0.3s ease;
+    transition        : all 0.3s ease;
+    -webkit-transform : translateY(-50%);
+    -ms-transform     : translateY(-50%);
+    -o-transform      : translateY(-50%);
+    transform         : translateY(-50%);
+}
+.mobile-button:before,
+.mobile-button:after,
+.mobile-button span {
+    background-color  : #fff;
+    -webkit-transition: all ease 0.3s;
+    -moz-transition   : all ease 0.3s;
+    transition        : all ease 0.3s;
+}
+
+.mobile-button:before,
+.mobile-button:after {
+    content                 : '';
+    position                : absolute;
+    top                     : 0;
+    height                  : 3px;
+    width                   : 100%;
+    left                    : 0;
+    top                     : 50%;
+    -webkit-transform-origin: 50% 50%;
+    -ms-transform-origin    : 50% 50%;
+    transform-origin        : 50% 50%;
+}
+.mobile-button span {
+    position   : absolute;
+    width      : 100%;
+    height     : 3px;
+    left       : 0;
+    top        : 50%;
+    overflow   : hidden;
+    text-indent: 200%;
+}
+.mobile-button:before {
+    -webkit-transform: translate3d(0, -7px, 0);
+    -moz-transform   : translate3d(0, -7px, 0);
+    transform        : translate3d(0, -7px, 0);
+}
+.mobile-button:after {
+    -webkit-transform: translate3d(0, 7px, 0);
+    -moz-transform   : translate3d(0, 7px, 0);
+    transform        : translate3d(0, 7px, 0);
+}
+.mobile-button.active span {
+    opacity: 0;
+}
+.mobile-button.active:before {
+    -webkit-transform: rotate3d(0, 0, 1, 45deg);
+    -moz-transform   : rotate3d(0, 0, 1, 45deg);
+    transform        : rotate3d(0, 0, 1, 45deg);
+}
+.mobile-button.active:after {
+    -webkit-transform: rotate3d(0, 0, 1, -45deg);
+    -moz-transform   : rotate3d(0, 0, 1, -45deg);
+    transform        : rotate3d(0, 0, 1, -45deg);
+}
 .header {
     display: flex;
     justify-content: space-between;
@@ -128,22 +202,36 @@ body {
 }
 .header .menu {
     display: flex;
-    padding-right: 110px;
+    padding-right: 15px;
 }
 .header .menu-item {
-    padding: 0 70px;
+    padding: 0 50px;
 }
 .header .menu-item a {
     font-size: 24px;
     font-weight: 500;
+    letter-spacing: 2px;
     color: #fff;
     text-transform: uppercase;
+    white-space: nowrap;
+}
+.header .menu-item a:hover {
+    color: #0053ff;
 }
 .header .social-menu {
     display: flex;
     align-items: center;
 }
-.social-menu .item-social {
+.header .lists-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex: 1 1 auto;
+    padding: 0 0 0 120px;
+}
+.social-menu a {
+    color: #0054FF;
+    font-size: 28px;
     background-color: #EDEDE2;
     border-radius: 50%;
     display: flex;
@@ -152,11 +240,9 @@ body {
     height: 44px;
     width: 44px;
 }
-.social-menu a {
-    color: #0054FF;
-    font-size: 28px;
-    display: flex;
-    align-items: center;
+.social-menu a:hover {
+    transition: all .25s ease-in-out;
+    opacity: .7;
 }
 .social-menu .item-social + .item-social {
     margin-left: 12px;
@@ -164,19 +250,20 @@ body {
 .home .hero {
     background-image: url('../img/hero/hero-index.png');
     background-size: cover;
-    padding: 294px 0 40px;
+    padding: 290px 0 50px;
+    margin-bottom: 7px;
 }
 .hero-text-wrap {
     text-align: center;
-    max-width: 1100px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 .hero-text-wrap .sub-title {
     color: #EEECE4;
     font-size: 19px;
     text-transform: uppercase;
-    letter-spacing: 4px;
-    margin: 0 0 25px;
+    letter-spacing: 1px;
+    margin: 0 0 17px;
 }
 .hero-text-wrap .title {
     color: #EEECE4;
@@ -184,9 +271,10 @@ body {
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 12px;
+    line-height: 1.1;
     position: relative;
-    padding: 0 0 10px;
-    margin: 0 0 25px;
+    padding: 0 0 40px;
+    margin: 0 0 20px;
 }
 .hero-text-wrap .title:after {
     content: '';
@@ -196,24 +284,27 @@ body {
     left: 0;
     right: 0;
     margin: 0 auto;
-    width: 400px;
+    width: 570px;
     height: 1px;
 }
 .hero-text-wrap .text {
     color: #fff;
     font-size: 30px;
+    line-height: 1.3;
+    text-transform: uppercase;
     opacity: 0.80;
-    margin: 0 0 50px;
+    margin: 0 0 80px;
 }
 .menu-tab {
     overflow: hidden;
     margin: 0 -15px;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
 }
 .menu-tab li {
     width: 20%;
     padding: 0 15px;
-    float: left;
     cursor: pointer;
     overflow: hidden;
     text-align: center;
@@ -251,14 +342,15 @@ body {
     background-color: #EEECE4;
 }
 .menu-tab .thumb {
-    padding: 0 25px;
+    padding: 10px 37px 0;
 }
 .menu-tab .text-wrap {
-    padding: 0px 7px 10px;
+    padding: 0px 7px 20px;
 }
 .menu-tab .title-icon {
     color: #1D1B24;
-    font-size: 18px;
+    font-size: 15px;
+    letter-spacing: -1px;
     text-transform: uppercase;
 }
 .menu-tab .active .title-icon {
@@ -266,11 +358,12 @@ body {
 }
 .content-tab {
     background-color: rgb(238 236 228 / 90%);
-    margin: 30px 0 0;
+    border-radius: 5px;
+    margin: 40px 0 0;
 }
 .content-tab .content-item {
     display: none;
-    padding: 70px 60px;
+    padding: 70px 65px;
 }
 .content-tab .content-item.active {
     display: block;
@@ -280,15 +373,20 @@ body {
 }
 .content-tab .inner-wrap {
     display: flex;
+    flex-wrap: wrap;
 }
 .content-tab .text-col {
     padding: 0 50px 0 0;
-    flex: 0 0 50%;
-    max-width: 50%;
+    flex: 0 0 55%;
+    max-width: 55%;
 }
 .content-tab .img-col {
-    flex: 0 0 50%;
-    max-width: 50%;
+    flex: 0 0 45%;
+    max-width: 45%;
+}
+.content-tab .wrap-img {
+    border-radius: 5px;
+    overflow: hidden;
 }
 .content-tab .hr {
     display: inline-flex;
@@ -311,11 +409,12 @@ body {
     font-weight: 500;
     letter-spacing: 2px;
     max-width: 300px;
-    margin: 20px 0 15px;
+    margin: 27px 0 15px;
 }
 .content-tab .text {
     color: #1d1b24;
     font-size: 18px;
+    line-height: 1.7;
     margin: 0 0 30px;
 }
 .content-tab .btn {
@@ -325,6 +424,8 @@ body {
 .who-we-are {
     display: flex;
     position: relative;
+    min-height: 94vh;
+    padding: 0 0 40px;
 }
 .who-we-are .left-img-col {
     background-image: url('../img/section/male-server-administrator.jpg');
@@ -345,23 +446,23 @@ body {
     opacity: 0.6;
 }
 .who-we-are .text-holder {
-    padding: 90px 30px 70px 45px;
+    padding: 102px 30px 70px 50px;
     position: absolute;
     background: #4C475C;
     border-top-right-radius: 100px;
-    top: 13%;
-    left: 51.3%;
+    top: 14%;
+    left: 51.5%;
     width: 570px;
 }
 .who-we-are .title {
     color: #fff;
     font-size: 55px;
-    margin-bottom: 20px;
+    margin-bottom: 28px;
 }
 .who-we-are p {
     color: #fff;
     font-size: 18px;
-    line-height: 1.5;
+    line-height: 1.65;
 }
 .who-we-are .btn-holder {
     margin: 50px 0 0;
@@ -436,4 +537,185 @@ body {
     opacity: 1;
     visibility: visible;
     z-index: 99;
+}
+
+
+
+
+@media (max-width: 1630px) {
+    .header .menu-item {
+        padding: 0 30px;
+    }
+    .header .menu-item a {
+        font-size: 22px;
+    }
+}
+@media (max-width: 1350px) {
+    .header {
+        padding: 30px 30px;
+    }
+    .header .lists-wrap {
+        padding: 0 0 0 30px;
+    }
+    .header .menu-item {
+        padding: 0 15px;
+    }
+    .header .menu-item a {
+        font-size: 20px;
+    }
+}
+@media (max-width: 1199px) {
+    .hero-text-wrap .sub-title {
+        font-size: 17px;
+    }
+    .hero-text-wrap .title {
+        font-size: 60px;
+        letter-spacing: 6px;
+    }
+    .hero-text-wrap .text {
+        font-size: 22px;
+    }
+    .menu-tab li {
+        width: 33.33%;
+    }
+    .menu-tab .text-wrap {
+        padding: 0px 30px 20px;
+    }
+    .who-we-are .text-holder {
+        padding: 80px 30px 70px 50px;
+        left: 5%;
+        width: 90%;
+    }
+    .who-we-are .title {
+        font-size: 50px;
+    }
+    .who-we-are p {
+        font-size: 16px;
+    }
+}
+@media (max-width: 991px) {
+    .mobile-button {
+        display: block;
+        z-index: 999;
+    }
+    .header {
+        padding: 20px 20px;
+    }
+    .header .logo {
+        max-width: 150px;
+        display: block;
+    }
+    .header .lists-wrap {
+        width: 100%;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        z-index: 9999;
+        background-color: #fff;
+        padding: 0;
+        flex-wrap: wrap;
+        display: none;
+    }
+    .header .menu {
+        flex-wrap: wrap;
+        padding: 0;
+    }
+    .header .main-nav {
+        width: 100%;
+    }
+    .header .menu-item {
+        padding: 3px 15px;
+        cursor: pointer;
+        border-bottom: 1px solid #ebebeb;
+        position: relative;
+        width: 100%;
+    }
+    .header .menu-item a {
+        color: #052336;
+        font-size: 18px;
+        line-height: 2.5;
+    }
+    .header .social-nav {
+        width: 100%;
+    }
+    .header .social-menu {
+        justify-content: center;
+        padding: 20px 0;
+    }
+    .menu-tab .text-wrap {
+        padding: 0px 10px 20px;
+    }
+    .content-tab .content-item,
+    .content-tab .content-item.small-img {
+        padding: 50px 40px;
+    }
+    .content-tab .title-heading {
+        font-size: 18px;
+    }
+    .content-tab .text {
+        font-size: 16px;
+    }
+    .content-tab .text-col {
+        padding: 0 30px 0 0;
+    }
+    .content-tab .img-col {
+        align-items: center;
+        display: flex;
+    }
+}
+@media (max-width: 767px) {
+    .home .hero {
+        padding: 170px 0 50px;
+    }
+    .hero-text-wrap .title {
+        font-size: 44px;
+    }
+    .hero-text-wrap .title:after {
+        width: 100%;
+    }
+    .hero-text-wrap .sub-title {
+        font-size: 14px;
+    }
+    .hero-text-wrap .text {
+        font-size: 18px;
+    }
+    .menu-tab li {
+        width: 100%;
+    }
+    .menu-tab .thumb {
+        max-width: 200px;
+        margin: 0 auto;
+    }
+    .content-tab {
+        margin: 10px 0 0;
+    }
+    .content-tab .inner-wrap {
+        flex-direction: column-reverse;
+    }
+    .content-tab .content-item,
+    .content-tab .content-item.small-img {
+        padding: 50px 30px;
+    }
+    .content-tab .text-col {
+        flex: 0 0 100%;
+        max-width: 100%;
+        padding: 0;
+    }
+    .content-tab .img-col {
+        flex: 0 0 100%;
+        max-width: 100%;
+        margin: 0 0 30px;
+        justify-content: center;
+    }
+    .who-we-are .text-holder {
+        padding: 50px 20px 40px 20px;
+        border-top-right-radius: 50px;
+        top: 10%;
+    }
+    .who-we-are .title {
+        font-size: 40px;
+    }
+    .who-we-are p {
+        font-size: 14px;
+    }
 }
