--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -11,20 +11,23 @@
     gap: 2em;
 }
 .our-contact {
-    margin: -30px 0 60px;
+    margin: -30px 0 50px;
 }
 .our-inner {
     display: flex;
     align-items: center;
     border-radius: 5px;
-    padding: 36px 5px 31px 35px;
-    
+    padding: 30px 15px;
 }
 .our-inner:nth-child(odd) {
     background-color: #0053ff;
 }
 .our-inner:nth-child(even) {
     background-color: #4C475C;
+}
+
+.wrap-our-footer .wrap-about {
+    padding: 10px 0 0;
 }
 .logo-footer {
     margin: 0 0 75px;
@@ -36,16 +39,17 @@
     color: #fff;
 }
 .our-inner .list-info .title {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 .our-inner .list-info .title a {
     font-size: 20px;
     font-weight: 500;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
 }
 .our-inner .list-info .sub-title a {
     font-weight: 400;
     font-size: 18px;
+    letter-spacing: -1px;
 }
 .our-inner .list-info .sub-title a:hover {
     opacity: .7;
@@ -56,6 +60,7 @@
     justify-content: center;
     width: 100%;
     max-width: 77px;
+    min-width: 77px;
     height: 77px;
     background-color: rgba(255, 255, 255, .1);
     border-radius: 50%;
@@ -67,10 +72,10 @@
     margin: 25px 0;
 }
 .list-social li + li {
-    margin-left: 17px;
+    margin-left: 15px;
 }
 .list-social a {
-    font-size: 23px;
+    font-size: 30px;
     color: #0053ff;
     background-color: #fff;
     border-radius: 50%;
@@ -93,21 +98,20 @@
     text-transform: uppercase;
     font-size: 24px;
     font-weight: 500;
-    margin-bottom: 27px;
-    letter-spacing: 4px;
+    margin-bottom: 25px;
 }
 .footer .foo-col .list-sub li {
-    margin-bottom: 9px;
+    margin-bottom: 4px;
 }
 .footer .foo-col .list-sub a {
     text-transform: uppercase;
     font-size: 18px;
     color: #fff;
-    letter-spacing: 1.5px;
+    letter-spacing: -1px;
     opacity: .8;
 }
 .footer .foo-col .list-sub a:hover {
-    color: #0053ff;
+    opacity: 1;
 }
 .footer .foo-col .description {
     font-size: 16px;
@@ -116,36 +120,127 @@
     opacity: .8;
     margin: 0 0 30px;
 }
-.footer .foo-col .btn {
-    margin: 0;
-    max-width: 200px;
-}
-
 .copyright-wrap {
     display: flex;
     justify-content: space-between;
-    font-size: 18px;
+    flex-wrap: wrap;
+    font-size: 16px;
     border-top: 1px solid rgba(255, 255, 255, .1);
-    margin: 69px 0 0;
-    padding: 29px 10px;
+    margin: 70px 0 0;
+    padding: 25px 10px;
+    letter-spacing: -1px;
+}
+.privacy-terms {
+    display: flex;
 }
 .copyright-wrap a {
+    display: block;
     color: #fff;
-    letter-spacing: 1px;
+    letter-spacing: 0;
     position: relative;
 }
 .copyright-wrap a:hover {
     color: #0053ff;
 }
 .copyright-wrap a + a {
-    padding-left: 23px;
+    padding-left: 30px;
 }
 .copyright-wrap a + a::before {
     content: "";
     position: absolute;
-    left: 8px;
-    top: calc(50% - 9px);
+    left: 15px;
+    top: calc(50% - 7px);
     width: 2px;
     height: 16px;
     background-color: #fff;
+}
+
+@media only screen and (max-width: 1199px) {
+    .wrap-our-footer {
+        gap: 1rem;
+    }
+
+}
+@media only screen and (max-width: 1199px) and (min-width: 991px)  {
+    .our-inner .icon {
+        max-width: 55px;
+        min-width: 55px;
+        height: 55px;
+    }
+    .our-inner .icon svg {
+        max-width: 25px;
+    }
+    .our-inner .list-info .sub-title a {
+        font-size: 14px;
+    }
+}
+@media screen and (max-width: 991px) {
+    .wrap-our-footer {
+        grid-template-columns: repeat(2,minmax(0,1fr));
+        gap: 2rem;
+    }
+    .wrap-our-footer.our-contact {
+        grid-template-columns: repeat(1,minmax(0,1fr));
+    }
+    .wrap-our-footer .wrap-about {
+        grid-column: span 2/span 2;
+        display: flex;
+        justify-content: space-between;
+        padding: 0;
+    }
+    .logo-footer,
+    .list-social {
+        margin: 0;
+    }
+    .copyright-wrap {
+        justify-content: center;
+        text-align: center;
+    }
+    .copyright {
+        margin: 0 0 20px;
+    }
+}
+@media only screen and (max-width: 767px) {
+    .footer .foo-col .title-heading {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+    .footer .foo-col .list-sub a,
+    .footer .foo-col .description {
+        font-size: 14px;
+    }
+}
+@media only screen and (max-width: 479px) {
+    .wrap-our-footer {
+        grid-template-columns: repeat(1,minmax(0,1fr));
+    }
+    .wrap-our-footer .wrap-about {
+        grid-column: span 1/span 1;
+    }
+    .wrap-our-footer .wrap-about {
+        gap: 1rem;
+        align-items: center;
+    }
+    .logo-footer,
+    .list-social {
+        max-width: 50%;
+    }
+    .list-social a {
+        font-size: 18px;
+        width: 35px;
+        height: 35px;
+    }
+    .footer .foo-col {
+        margin: 0;
+    }
+    .privacy-terms {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .copyright-wrap a + a {
+        padding: 0;
+    }
+    .copyright-wrap a + a::before {
+        display: none;
+    }
 }
