--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 @import "https://use.typekit.net/wle4hpz.css";
 @import "animate.css";
 @import "fontawesome.css";
+@import "contact.css";
 @import "footer.css";
 
 #loading-overlay {
