--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,21 +1,30 @@
 .contact-form-section {
-    padding: 60px 0;
+    padding: 35px 0;
 }
 .contact .our-contact {
-    margin: 0 0 50px;
+    margin: 0 0 102px;
 }
 .contact-wrap {
     display: grid;
     grid-template-columns: repeat(3,minmax(0,1fr));
     gap: 2rem;
 }
+.contact .title-section {
+    line-height: 0.9;
+}
+.contact .contact-description .description {
+    line-height: 1.9;
+}
+.contact .list-social {
+    margin: 32px 0;
+}
 .contact-form {
     grid-column: span 2/span 2;
     width: 100%;
-
     display: grid;
     grid-template-columns: repeat(2,minmax(0,1fr));
-    gap: 2rem;
+    gap: 1.25rem;
+    padding: 5px 0 0;
 }
 .contact-form input {
     font-size: 16px;
@@ -29,8 +38,10 @@
 .contact-form textarea {
     border: 2px solid rgba(8, 76, 148, 0.2);
     border-radius: 5px;
-    padding: 33px 19px;
+    padding: 15px 19px;
     width: 100%;
+    height: 100%;
+    max-height: 180px;
 }
 .your-message {
     grid-column: span 2/span 2;
@@ -38,7 +49,45 @@
 .contact .list-social a {
     background-color: #EDEDE2;
 }
-
 .contact .footer {
     padding: 80px 0 10px;
+}
+.contact .btn {
+    text-transform: capitalize;
+}
+label.error {
+    color: red;
+    font-size: 14px;
+}
+@media screen and (max-width: 991px) {
+    .contact .our-contact {
+        margin: 0 0 50px;
+    }
+}
+@media only screen and (max-width: 767px) {
+    .contact-wrap {
+        grid-template-columns: repeat(2,minmax(0,1fr));
+        gap: 1rem;
+    }
+    .contact-form {
+        gap: 1rem;
+        padding: 0;
+    }
+    .contact-description {
+        grid-column: span 2/span 2;
+    }
+    .contact .list-social {
+        margin: 15px 0;
+    }
+}
+@media only screen and (max-width: 479px) {
+    .contact-wrap,
+    .contact-form {
+        grid-template-columns: repeat(1,minmax(0,1fr));
+    }
+    .contact-form,
+    .contact-description,
+    .your-message {
+        grid-column: span 1/span 1;
+    }
 }
